[package]
name = "daily_metrics_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0" # For cleaner error handling
lazy_static = "1.4" # To initialize theme easily
colored = "2.1" # For nicer output
